# yadex

./: Cargo.toml
etc/: config.toml  error.html  header.html  index.html
src/: cmdline.rs  config.rs  main.rs  server.rs
