[package]
name = "yadex"
version = "0.1.0"
description = "Yet another index page"
edition = "2021"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "matched-path", "macros", "tokio"] }
clap = { version = "4.5.24", features = ["derive"] }
color-eyre = "0.6.3"
compio = { version = "0.13.2", features = ["macros"] }
figment = { version = "0.10.19", features = ["toml"] }
serde = { version = "1.0.217", features = ["derive"] }
snafu = { version = "0.8.5", features = ["rust_1_81"] }
tokio = { version = "1.43.0", features = ["rt", "net", "fs", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
